<resources>
    <string name="app_name">ABN_musical structure(playlist)</string>

    <string name="title">Title</string>
    <string name="artist">Artist</string>
    <string name="all_songs">All songs</string>
    <string name="zero">0</string>
    <string name="slash">:</string>
    <string name="favorites">Favorites</string>

    <string name="title_playlist">Playlist</string>
    <string name="title_artist">Search by artist</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_song">Song details</string>
    <string name="title_menu">Main menu</string>
</resources>
