<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.andrei.abn_musicalstructureplaylist.MainActivity">

    <TextView
        android:id="@+id/allSongsActivity"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="@dimen/_48sp"
        android:background="@color/c1"
        android:text="@string/all_songs"/>

    <TextView
        android:id="@+id/favoritesActivity"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="@dimen/_48sp"
        android:background="@color/c2"
        android:text="@string/favorites"/>

    <TextView
        android:id="@+id/artistActivity"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="@dimen/_48sp"
        android:background="@color/c3"
        android:text="@string/artist"/>

</LinearLayout>
